# spatialCorr

./: README.md
codes/cppCode/: .gitignore  CMakeLists.txt  README.md  exampleIOtest.cpp
codes/cppCode/include/: binsGenerator.h  distContainer.h  fileIO.h  filePath.h  findPair.h  healpixCorrelation.h  mathDouble.h  myAVL.h  myDefineConst.h  poissonPoint2d.h  sphereTwoCorrelation.h  sphericalPoint.h  testFunc.h  twoPointkdTree.h
codes/cppCode/source/: CMakeLists.txt  binsGenerator.cpp  fileIO.cpp  filePath.cpp  findPair.cpp  healpixCorrelation.cpp  mathDouble.cpp  myAVL.cpp  myDefineConst.cpp  poissonPoint2d.cpp  readFile.cpp  smallFuncTest.cpp  sphereTwoCorrelation.cpp  sphericalPoint.cpp  testFunc.cpp  twoPointkdTree.cpp
codes/cppCode/testConfig/: cityData.txt
codes/matlabCode/: README.md  mainFunc.m  my_get_and_save_rx_hm.m  my_imagesc_xscaled.m  my_make_heat_map.m  my_max_RSS_per_RX_angle.m  runMe.sh  write_mat2csv.m  write_mat2csv_frank.m
codes/pythonCode/: README.md  almCoeff.py  dataPreProc.py  fileIO.py  healpixPlot.py  mat2csv.py  plotHelpFunc.py
data/: README.md
data/matlabData/104Threshold/: 2RSSFinal.csv  MAXRSSFinal.csv
data/matlabData/91Threshold/: 1RRSSFinal.csv  3RSSFinal.csv  4RSSFinal.csv  MAXRSSFinal.csv  MAXphiFinal.csv
data/matlabData/LangenfeldData/HM_RXA_TRX_MAXRSS/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv
data/matlabData/LangenfeldData/HM_RXA_TRX_MAXRSS_meas/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv  phiFinal.csv
data/matlabData/LangenfeldData/HM_RXA_horn_MAXRSS/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv
data/matlabData/LangenfeldData/HM_RXA_horn_MAXRSS_meas/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv  txFinal.csv
data/matlabData/LangenfeldData/HM_RXB_TRX_MAXRSS/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv
data/matlabData/LangenfeldData/HM_RXB_TRX_MAXRSS_meas/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv  txFinal.csv
data/matlabData/LangenfeldData/HM_RXB_horn_MAXRSS/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv
data/matlabData/LangenfeldData/HM_RXB_horn_MAXRSS_meas/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv  ansFinal.csv  thetaFinal.csv  txFinal.csv
data/matlabData/LangenfeldData/HM_RXC_TRX_MAXRSS/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv
data/matlabData/LangenfeldData/HM_RXC_TRX_MAXRSS_meas/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv
data/matlabData/LangenfeldData/HM_RXC_horn_MAXRSS/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv
data/matlabData/LangenfeldData/HM_RXC_horn_MAXRSS_meas/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv  thetaFinal.csv  txFinal.csv
data/matlabData/LangenfeldData/HM_TX2RXB_TRX_MAXRSS/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv
data/matlabData/LangenfeldData/HM_TX2RXB_TRX_MAXRSS_meas/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv  tx2Final.csv
data/matlabData/LangenfeldData/HM_TX2RXD_TRX_MAXRSS/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv  thetaFinal.csv
data/matlabData/LangenfeldData/HM_TX2RXD_TRX_MAXRSS_meas/: RSSFinal.csv  TXRSSmaxAnglesFinal.csv  tx2Final.csv
data/matlabData/superCData/TX1_RX0_raytracing/: RSSFinal.csv
data/matlabData/superCData/TX1_RX118-III_raytracing/: RSSFinal.csv
data/matlabData/superCData/TX1_RX11_raytracing/: RSSFinal.csv
data/matlabData/superCData/TX1_RX12_raytracing/: RSSFinal.csv
(+13425 files in other folders)
